	library(graphics) or called as graphics::ps.options or,
	better, set as a hook -- see ?setHook.

    o	There has been a concerted effort to speed up the startup of
	an R session: it now takes about 2/3rds of the time of 1.8.1.

    o	A warning is issued at startup in a UTF-8 locale, as currently R
	only supports single-byte encodings. [This may change before
	release.]


NEW FEATURES

    o   $, $<-, [[, [[<- can be applied to environments. Only character 
        arguments are allowed and no partial matching is done. The
        semantics are basically that of get/assign to the environment with
        inherits=FALSE.

    o	The perl=TRUE argument to grep/regexpr/(g)sub() now uses
	character tables prepared for the locale currently in use each
	time it is used, rather than those of the C locale.

    o	sink() now has a split= argument to direct output to both the
	sink and the current output connection.

    o	The `package' argument to data() is no longer allowed to be a
	(unquoted) name and so can be a variable name or a quoted
	character string.

    o	Deparsing (including using dump() and dput()) an integer
	vector now wraps it in as.integer() so it will be source()d
	correctly.  (Related to PR#4361.)

    o	Model fits now add a "dataClasses" attribute to the terms, which
	can be used to check that the variables supplied for
	prediction are of the same type as those used for fitting.
	(It is currently used by predict() methods for classes "lm",
	"mlm", "glm" and "ppr", as well as methods in packages MASS,
	rpart and tree.)

    o	read.table() now allows embedded newlines in quoted fields. (PR#4555)

    o	New command-line argument --max-ppsize allows the size of the
	pointer protection stack to be set higher than the previous
	limit of 10000.

    o	The fonts on an X11() device (also jpeg() and png() on Unix)
	can be specified by a new argument `fonts' defaulting to the
	value of a new option "X11fonts".
