@@ -3,7 +3,8 @@ function(x, y = NULL, legend, fill=NULL, col = "black", lty, lwd, pch,
 	 angle = NULL, density = NULL, bty = "o",
 	 bg = par("bg"), pt.bg = NA, cex = 1,
 	 xjust = 0, yjust = 1, x.intersp = 1, y.intersp = 1, adj = c(0, 0.5),
-	 text.width = NULL, merge = do.lines && has.pch, trace = FALSE,
+	 text.width = NULL, text.col = par("col"),
+         merge = do.lines && has.pch, trace = FALSE,
 	 plot = TRUE, ncol = 1, horiz = FALSE)
 {
     ## the 2nd arg may really be `legend'
@@ -182,7 +183,7 @@ function(x, y = NULL, legend, fill=NULL, col = "black", lty, lwd, pch,
 
     xt <- xt + x.intersp * xchar
     if(plot)
-	text2(xt, yt, labels = legend, adj = adj, cex = cex)
+	text2(xt, yt, labels = legend, adj = adj, cex = cex, col = text.col)
 
     invisible(list(rect = list(w = w, h = h, left = left, top = top),
 		   text = list(x = xt, y = yt)))
