@@ -51,7 +51,7 @@ USER-VISIBLE CHANGES
 
 NEW FEATURES
 
-    o   $, $<-, [[, [[<- can be applied to environments. Only character 
+    o   $, $<-, [[, [[<- can be applied to environments. Only character
         arguments are allowed and no partial matching is done. The
         semantics are basically that of get/assign to the environment with
         inherits=FALSE.
@@ -231,6 +231,8 @@ NEW FEATURES
 
     o	varimax() and promax() add class "loadings" to their loadings
 	component.
+
+    o	legend() has a new argument 'text.col'.
 
 
 UTILITIES
